SERVER-31482 Change mutex to recursive mutex for ephemeral_for_test_record_store